<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.nilhcem.fakesmtp</groupId>
	<artifactId>fakesmtp</artifactId>
	<version>2.4.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>Fake SMTP</name>
	<description>Dummy SMTP server for testing</description>
	<url>https://github.com/Nilhcem/FakeSMTP</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
		<java.version>17</java.version>
		<docker.image>fakesmtp</docker.image>
	</properties>

	<dependencies>
		<!-- MIG Layout: layout for Swing -->
		<dependency>
			<groupId>com.miglayout</groupId>
			<artifactId>miglayout-swing</artifactId>
			<version>11.2</version>
		</dependency>

		<!-- SubEtha SMTP: easy-to-use server-side SMTP library for Java -->
		<!-- See : https://github.com/davidmoten/subethasmtp/pull/37 (upgrade jakarta.mail to 2.0.0) -->
		<dependency>
			<groupId>com.github.davidmoten</groupId>
			<artifactId>subethasmtp</artifactId>
			<version>6.0.7</version>
			<exclusions>
				<exclusion>
					<groupId>com.sun.mail</groupId>
					<artifactId>javax.mail</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>jakarta.mail</artifactId>
			<version>2.0.1</version>
		</dependency>

		<!-- Logging: slf4j + logback -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.9</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.4.11</version>
		</dependency>

		<!-- Commons IO: utilities to assist with developing IO functionality -->
		<dependency>
		    <groupId>commons-io</groupId>
		    <artifactId>commons-io</artifactId>
		    <version>2.15.0</version>
		</dependency>

		<!-- Commons CLI: API for presenting, processing and validating a command line interface -->
		<dependency>
		    <groupId>commons-cli</groupId>
		    <artifactId>commons-cli</artifactId>
		    <version>1.6.0</version>
		</dependency>

		<!-- Apple java extensions (to use a custom icon in the Mac Dock) -->
		<dependency>
		    <groupId>com.apple</groupId>
		    <artifactId>AppleJavaExtensions</artifactId>
		    <version>1.4</version>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.30</version>
			<scope>provided</scope>
		</dependency>

		<!-- Integration test -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>5.10.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.24.2</version>
			<scope>test</scope>
		</dependency>
		<!-- commons-email not yet compatible with jakarta.mail, waiting for https://github.com/apache/commons-email/pull/37 -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-email</artifactId>
			<version>1.5</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>com.sun.mail</groupId>
					<artifactId>javax.mail</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>

	<build>
		<finalName>fakeSMTP-${project.version}</finalName>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>false</filtering>
			</resource>
			<resource>
				<directory>src/main/resources-filtered</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<release>${java.version}</release>
					<showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
				<configuration>
					<propertiesEncoding>ISO-8859-1</propertiesEncoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.2</version>
			</plugin>

			<!-- Integration tests. Launch them with "$ mvn integration-test" -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.2.2</version>
				<executions>
					<execution>
						<id>integration-test</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
					<execution>
						<id>verify</id>
						<goals>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Create an executable jar with dependencies -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<archive>
						<manifestFile>${project.basedir}/src/main/resources/META-INF/MANIFEST.MF</manifestFile>
					</archive>
					<!-- Remove the "-jar-with-dependencies" at the end of the file -->
					<appendAssemblyId>false</appendAssemblyId>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>single</goal>
						</goals>
						<phase>package</phase>
					</execution>
				</executions>
			</plugin>

			<!-- For releases -->
			<plugin>
				<groupId>com.amashchenko.maven.plugin</groupId>
				<artifactId>gitflow-maven-plugin</artifactId>
				<version>1.20.0</version>
				<configuration>
					<gitFlowConfig>
						<productionBranch>master</productionBranch>
						<developmentBranch>master</developmentBranch>
						<versionTagPrefix>v</versionTagPrefix>
					</gitFlowConfig>
				</configuration>
			</plugin>

			<!-- Docker -->
			<plugin>
				<groupId>com.spotify</groupId>
				<artifactId>docker-maven-plugin</artifactId>
				<version>0.3.2</version>
				<configuration>
					<imageName>${docker.image}</imageName>
					<dockerDirectory>src/main/docker</dockerDirectory>
					<resources>
						<resource>
							<targetPath>/</targetPath>
							<directory>${project.build.directory}</directory>
							<include>${project.build.finalName}.jar</include>
						</resource>
					</resources>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.4.1</version>
				<executions>
					<execution>
						<id>enforce-java-version</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireJavaVersion>
									<version>${java.version}</version>
								</requireJavaVersion>
							</rules>
							<fail>true</fail>
						</configuration>
					</execution>
					<execution>
						<id>enforce-banned-dependencies</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<bannedDependencies>
									<excludes>
										<!-- Replaced by com.sun.mail:jakarta.mail -->
										<exclude>com.sun.mail:javax.mail</exclude>

										<!-- Not suitable for runtime (needs classes under com.sun.mail.*) -->
										<exclude>jakarta.mail:jakarta.mail-api</exclude>
									</excludes>
								</bannedDependencies>
							</rules>
							<fail>true</fail>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<!-- List the core committers + contributors -->
	<developers>
		<developer>
			<id>nilhcem</id>
			<name>Gautier MECHLING</name>
			<url>http://www.nilhcem.com</url>
			<roles>
				<role>developer</role>
			</roles>
			<timezone>Europe/Paris</timezone>
		</developer>
	</developers>
	<contributors>
		<contributor>
			<name>jasonpenny</name>
			<url>https://github.com/jasonpenny</url>
		</contributor>
		<contributor>
			<name>andreyknupp</name>
			<url>https://github.com/andreyknupp</url>
		</contributor>
		<contributor>
			<name>eugenehr</name>
			<url>https://github.com/eugenehr</url>
		</contributor>
		<contributor>
			<name>cchantep</name>
			<url>https://github.com/cchantep</url>
		</contributor>
		<contributor>
			<name>essobedo</name>
			<url>https://github.com/essobedo</url>
		</contributor>
		<contributor>
			<name>rellem</name>
			<url>https://github.com/rellem</url>
		</contributor>
		<contributor>
			<name>nakag</name>
			<url>https://github.com/nakag</url>
		</contributor>
		<contributor>
			<name>pawel-piecyk</name>
			<url>https://github.com/pawel-piecyk</url>
		</contributor>
		<contributor>
			<name>modeckimellett</name>
			<url>https://github.com/modeckimellett</url>
		</contributor>
		<contributor>
			<name>Vest</name>
			<url>https://github.com/Vest</url>
		</contributor>
		<contributor>
			<name>evrycollin</name>
			<url>https://github.com/evrycollin</url>
		</contributor>
		<contributor>
			<name>lfuelling</name>
			<url>https://github.com/lfuelling</url>
		</contributor>
	</contributors>

	<!-- License -->
	<licenses>
		<license>
			<name>BSD</name>
			<url>LICENSE.txt</url>
		</license>
	</licenses>
</project>
